--- a/spec.yml
+++ b/spec.yml
@@ -163,6 +163,8 @@ components:
           example: leonard@marschke.me
         rcpt_to:
           type: array
+          minItems: 1
+          maxItems: 256
           items:
             type: string
             format: mail
